<resources>
    <string name="app_name">Fack Call</string>
    <string name="Cancle">Cancel</string>
    <string name="Interstitial_admob">ca-app-pub-3940256099942544/1033173712</string>
    <string name="account_email">imfotogenic@gmail.com</string>
    <string name="account_name">Soft Droid</string>
    <string name="add_call">Add call</string>
    <string name="add_call_imagview_pref">add_call_imagview_pref</string>
    <string name="admob_app_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="native_advance_admob">ca-app-pub-3940256099942544/2247696110</string>
    <string name="allow">Allow</string>
    <string name="angry">I\'m still angry</string>
    <string name="audio_of_call">Call Audio</string>
    <string name="audio_path_pref">audio_path_pref</string>
    <string name="autp_call">AUTO CALLS</string>
    <string name="back_to_app">Back to app</string>
    <string name="back_to_app_message">back to main screen</string>
    <string name="background_image_resource">background_image_resource</string>
    <string name="banner_admob">ca-app-pub-3940256099942544/6300978111</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="bluetooth_pref">bluetooth_pref</string>
    <string name="calender">Calender</string>
    <string name="call">Call</string>
    <string name="call_actvie_pref">call_actvie_pref</string>
    <string name="call_history">Call History</string>
    <string name="call_imageview_pref">call_imageview_pref</string>
    <string name="call_is_active">call_is_active</string>
    <string name="call_later">I\'ll call you later</string>
    <string name="call_now">Call Now</string>
    <string name="call_picked_color_code_pref">call_picked_color_code_pref</string>
    <string name="call_screen">Call Screens</string>
    <string name="call_screen_position">call_screen_position</string>
    <string name="call_themes">Call Themes</string>
    <string name="caller_info">Caller Info</string>
    <string name="caller_information">Caller Info</string>
    <string name="caller_name">Caller Name</string>
    <string name="cancel_call_imageview_pref">cancel_call_imageview_pref</string>
    <string name="change_caller">CHANGE CALLER</string>
    <string name="change_caller_info">Change caller information</string>
    <string name="change_charecter">Change Character</string>
    <string name="change_ringtone">Change call ringtone</string>
    <string name="choose_device">Choose Device</string>
    <string name="choose_device_message">Choose you favourite device for call</string>
    <string name="choose_from_characters">Choose from Presets</string>
    <string name="choose_from_contacts">Open Phonebook</string>
    <string name="clear_all_record">Do you want to clear all records ?</string>
    <string name="click_to_configure">Click to configure</string>
    <string name="click_to_select_custom_ringtone">Tap to select custom ringtone</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="contact">Contact :</string>
    <string name="contact_info_saved">Contact Saved</string>
    <string name="contact_permission_dialoug_message">App needs access to CONTACT and READ_EXTERNEL_STORAGE permissions in order to pick Contact Number, Contact Name and Contact Image from Contacts</string>
    <string name="contacts">Contacts</string>
    <string name="custom_ring_selected">custom_ring_selected</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="dark_mode_pref">dark_mode_pref</string>
    <string name="deiveing">Driving</string>
    <string name="delete">Delete</string>
    <string name="delete_all">Delete all !</string>
    <string name="delete_all_message">Do you want to delete all recordings ?</string>
    <string name="delete_message">Do you want to delete this recording ?</string>
    <string name="delete_this">Do you want to delete this record ?</string>
    <string name="delete_title">Delete !</string>
    <string name="dial_pad_pref">dial_pad_pref</string>
    <string name="done">Done</string>
    <string name="end_color">end_color</string>
    <string name="exit">Exit</string>
    <string name="exit_message">Exit app</string>
    <string name="exit_title">Exit this app</string>
    <string name="extra_volume">Extra volume</string>
    <string name="extra_volume_pref">extra_volume_pref</string>
    <string name="app_pref_name">fake_call_pref</string>
    <string name="firebase_database_url">https://sd-fake-call.firebaseio.com</string>
    <string name="fisrt_time_dialoug">fisrt_time_dialoug</string>
    <string name="five">5</string>
    <string name="five_min">5 Minutes</string>
    <string name="five_min_message">you will receive call in 5 Minutes</string>
    <string name="hold">Hold</string>
    <string name="home">Home</string>
    <string name="icon_desc">Ad icon</string>
    <string name="image_desc">Ad image</string>
    <string name="in_call_audio">In-Call Audio</string>
    <string name="in_meet">In meeting</string>
    <string name="info_softdroid_org">imfotogenic@gmail.com</string>
    <string name="keypad">Keypad</string>
    <string name="lbl_edit_note_title">Edit Note</string>
    <string name="lbl_new_note_title">New Note</string>
    <string name="yes">Yes</string>
    <string name="you_will_receive_call_in">You will receive call in</string>
    <string name="s1">Save image</string>
    <string name="s2">Allow Ad to store image in Picture gallery?</string>
    <string name="s3">Accept</string>
    <string name="s4">Decline</string>
    <string name="s5">Create calendar event</string>
    <string name="s6">Allow Ad to create a calendar event?</string>
    <string name="s7">Test Ad</string>
    <string name="save">Save</string>
    <string name="schedule">Schedule a call after</string>
    <string name="schedule_call">Schedule Call</string>
    <string name="schedule_history">History</string>
    <string name="search_menu_title">Search</string>
    <string name="seconds">seconds</string>
    <string name="select_ringtone">Select Ringtone</string>
    <string name="select_theme">Apply</string>
    <string name="send_message">Send Message</string>
    <string name="set_as_default_ringtone">Keep Default Ringtone</string>
    <string name="settime">Set Time</string>
    <string name="settings">Settings</string>
    <string name="shake_pref">shake_pref</string>
    <string name="shake_ur_mobile">Shake mobile to receive fake call</string>
    <string name="share_app">Share app</string>
    <string name="show_ur_love">Show your love on Play Store</string>
    <string name="silent">Silent</string>
    <string name="vicky_s8">0F47958573AFCC984D04E02D98867FA1</string>
    <string name="photo_permission_dialoug_message">App needs access to READ_EXTERNEL_STORAGE permission in order to pick image from Gallery</string>
    <string name="pick_call_imageview_pref">pick_call_imageview_pref</string>
    <string name="play_recording">Play Recording</string>
    <string name="play_recording_message">Tap to play recording</string>
    <string name="please_fill_contact_name_n_number">Please fill Contact Number</string>
    <string name="please_speek_recording_is_in_progress">Please speak, Voice Recording is in progress …</string>
    <string name="please_stop_rec_before_deleting">Please stop recording before deleting</string>
    <string name="please_stop_rec_before_playing">Please stop recording before playing</string>
    <string name="press_power_btn">Press power button 4 times to receive a fake call</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="fb_page_url">https://www.facebook.com/SoftDroidApps</string>
    <string name="google_privcay_policy_link">https://policies.google.com/privacy?hl=en</string>
    <string name="rorjan_test_device">323F27B90415621F37AF2998A6DBE5CD</string>
    <string name="m11_device">EFD698510A160BB674896B93B4E625CC</string>
    <string name="m11_test_device">3EEF2238CF4043D436B2C129EB224970</string>
    <string name="test_mobile_white">B0687CF922A4AE9513C727FBD2893DC5</string>
    <string name="uxi_device">0C98074F99C48F597D46DDA8B4B3A57D</string>
    <string name="promotion_package_name_pref">promotion_package_name_pref</string>
    <string name="rate_message">Show your love on playstpre</string>
    <string name="rate_us">Rate us</string>
    <string name="receive_call_after">Receive a fake call after</string>
    <string name="receive_call_now">Receive Call Now</string>
    <string name="record">Tap above to record audio</string>
    <string name="record_voice">Record Voice</string>
    <string name="recording_availible">Record</string>
    <string name="recording_in_progress">Recording in progress …</string>
    <string name="redme10_device">3FB0B063ED08FC73BD7DE9A9B54539A2</string>
    <string name="no_recording_availible">No Recording Available</string>
    <string name="opps_something_went_wrong">Opps something went wrong plesae try
again…</string>
    <string name="stop_media_player_pref">stop_media_player_pref</string>
    <string name="vibration_pref">vibration_pref</string>
    <string name="triple_tap_pref">triple_tap_pref</string>
    <string name="zegar_device">BDCCDF627FC9326734EEB1D03387F031</string>
    <string name="stop_call_service_pref_intent">stop_call_service_pref_intent</string>
    <string name="ringtone_path">ringtone_path</string>
    <string name="ringotne_not_found">Ringtonenot found!</string>
    <string name="main_grid_images_link">http://softdroid.org/android_promo/json/getsmalladv.php?takemyapp=1</string>
    <string name="single_ad_url">http://softdroid.org/android_promo/json/getDialogadv.php?takemyapp=no8</string>
    <string name="start_color_pref">start_color_pref</string>
    <string name="mid_color_pref">mid_color_pref</string>
    <string name="speaker">Speaker</string>
    <string name="mute">Mute</string>
    <string name="notes">Notes</string>
    <string name="message">Message</string>
    <string name="reminder">Reminder</string>
    <string name="name">Name</string>
    <string name="more_apps">More Apps</string>
    <string name="ringtone">Ringtone</string>
    <string name="msg_no_history">No Record Found</string>
    <string name="need_permission">Need Permission</string>
    <string name="vibration_during_call">Vibrateon incoming fake call</string>
    <string name="sure_msg">Overlay permission are required for our app to workproperly</string>
    <string name="privacy_policy_05_point">We may disclose Non-personal data to third
parties and/or allow third parties to collect Non-personal data through their
own embedded technology. In order to deliver ads to you, the third-party
advertising companies may place or recognize unique cookies, anonymous
identifiers or similar technology for non-personally identifiable
information. We use only Admob by Google for advertisement purpose. If you
would like more information, please follow the link below: AdMob by Google -
Google Privacy</string>
    <string name="privacy_policy_10_point">If you haveany suggestions, feedback or requests, please contact us on our</string>
    <string name="privacy_policy_11_point"> Facebook page:https://www.facebook.com/SoftDroidApps </string>
    <string name="privacy_policy_12_point"> or email us at imfotogenic@gmail.com</string>
    <string name="submit">Submit</string>
    <string name="ten">10</string>
    <string name="thirty">30</string>
    <string name="thirty_min">30 Minutes</string>
    <string name="thirty_min_message">you will receive call in 30Minutes</string>
    <string name="thirty_sec">30 Seconds</string>
    <string name="one">1</string>
    <string name="minute">minute</string>
    <string name="minutes">minutes</string>
    <string name="fifteen">15</string>
    <string name="no">No</string>
</resources>