<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/roundshapenew">&gt;
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:padding="@dimen/_10sdp">

        <LinearLayout
            android:id="@+id/top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:text="@string/need_permission"
                android:textColor="@color/black"
                android:textSize="15sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/top"
            android:padding="7sp"
            android:text="@string/sure_msg"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/allow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/message"
            android:layout_alignParentRight="true"
            android:layout_margin="5dp"
            android:background="@drawable/call_now_bg"
            android:gravity="center"
            android:minWidth="100dp"
            android:padding="5dp"
            android:text="@string/allow"
            android:textColor="@color/white"
            android:textSize="12dp" />

        <TextView
            android:id="@+id/cancle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/message"
            android:layout_margin="5dp"
            android:layout_toLeftOf="@+id/allow"
            android:background="@drawable/delte_btn_bg"
            android:gravity="center"
            android:minWidth="100dp"
            android:padding="5dp"
            android:text="@string/Cancle"
            android:textColor="@color/white"
            android:textSize="12dp" />
    </RelativeLayout>
</RelativeLayout>
