<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center">

    <RelativeLayout
        android:id="@+id/mymain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/roundshapenew_dark"
        android:gravity="center"
        android:minWidth="@dimen/_250sdp">

        <LinearLayout
            android:id="@+id/main_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/toplayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/top_bar_dark"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/apptitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="@dimen/_8sdp"
                    android:text="@string/autp_call"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_20sdp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:gravity="center"
                    android:text="@string/receive_call_after"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:id="@+id/appdesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/receive_call_after"
                android:textColor="@color/black"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/ten_sec"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:background="?attr/selectableItemBackground">

                    <LinearLayout
                        android:id="@+id/ten_sec_main_layout"
                        android:layout_width="@dimen/_70sdp"
                        android:layout_height="@dimen/_72sdp"
                        android:background="@mipmap/dialog_box_btns_dark"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/ten"
                            android:textColor="@color/text_color_dark"
                            android:textSize="@dimen/_20sdp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/seconds"
                            android:textColor="@color/text_color_dark"
                            android:textSize="@dimen/_10sdp" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/thirty_sec"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground">

                    <LinearLayout
                        android:id="@+id/thirty_sec_layout"
                        android:layout_width="@dimen/_70sdp"
                        android:layout_height="@dimen/_72sdp"
                        android:layout_weight="1"
                        android:background="@mipmap/dialog_box_btns_dark"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/thirty"
                            android:textColor="@color/text_color_dark"
                            android:textSize="@dimen/_20sdp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/seconds"
                            android:textColor="@color/text_color_dark"
                            android:textSize="@dimen/_10sdp" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/one_min"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:background="?attr/selectableItemBackground">

                    <LinearLayout
                        android:id="@+id/one_min_layout"
                        android:layout_width="@dimen/_70sdp"
                        android:layout_height="@dimen/_72sdp"
                        android:background="@mipmap/dialog_box_btns_dark"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/one"
                            android:textColor="@color/text_color_dark"
                            android:textSize="@dimen/_20sdp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/minute"
                            android:textColor="@color/text_color_dark"
                            android:textSize="@dimen/_10sdp" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_15sdp"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/five_min"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:background="?attr/selectableItemBackground">

                    <LinearLayout
                        android:id="@+id/five_min_layout"
                        android:layout_width="@dimen/_70sdp"
                        android:layout_height="@dimen/_72sdp"
                        android:background="@mipmap/dialog_box_btns_dark"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/five"
                            android:textColor="@color/text_color_dark"
                            android:textSize="@dimen/_20sdp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/minutes"
                            android:textColor="@color/text_color_dark"
                            android:textSize="@dimen/_10sdp" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/fifteen_min"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground">

                    <LinearLayout
                        android:id="@+id/fifteen_min_layout"
                        android:layout_width="@dimen/_70sdp"
                        android:layout_height="@dimen/_72sdp"
                        android:background="@mipmap/dialog_box_btns_dark"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/fifteen"
                            android:textColor="@color/text_color_dark"
                            android:textSize="@dimen/_20sdp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/minutes"
                            android:textColor="@color/text_color_dark"
                            android:textSize="@dimen/_10sdp" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/thirty_min"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:background="?attr/selectableItemBackground">

                    <LinearLayout
                        android:id="@+id/thirty_min_layout"
                        android:layout_width="@dimen/_70sdp"
                        android:layout_height="@dimen/_72sdp"
                        android:background="@mipmap/dialog_box_btns_dark"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/thirty"
                            android:textColor="@color/text_color_dark"
                            android:textSize="@dimen/_20sdp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/minutes"
                            android:textColor="@color/text_color_dark"
                            android:textSize="@dimen/_10sdp" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>
